Alt descriptions added automatically.

--- a/src/homeStyleSrc.scss
+++ b/src/homeStyleSrc.scss
@@ -41,15 +41,9 @@ body.home {
   }
   
   .content-width {
-    width: 80%;
-    max-width: 1000px;
+    width: 95%;
+    max-width: 1200px;
     margin: auto;
-  }
-  
-  @media (max-width: 950px) {
-    .content-width {
-      width: 95%;
-    }
   }
 
   /*********************************************************/
@@ -83,7 +77,7 @@ body.home {
       --banner-text-color: #ebebeb; // Here to be applied to each text element to make sure it overrides.
   
       & > h1 {
-        padding-top: 3rem; // To make sure the title is not covered by the default wp navbar.
+        padding-top: 3rem; // To make sure the title is not covered by the default wordpress navbar in mobile version.
         color: var(--banner-text-color);
         font-size: 4rem;
         font-weight: 200;
@@ -157,10 +151,13 @@ body.home {
       }
     
       .text-content {
+        margin-right: 2rem;
+        margin-left: 2rem;
         text-align: right;
       }
     
       .text-content > h1 {
+        padding-top: 0;
         font-size: 5rem;
       }
     
@@ -172,7 +169,7 @@ body.home {
       a#tryLandsHomeBtn {
         position: fixed;
         left: 0;
-        top: 9rem;
+        top: 6rem;
         border-left: none;
         transform-origin: center left;
         transition: transform 0.3s;
@@ -520,13 +517,17 @@ body.home {
       .grid {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-column-gap: 60px;
+        grid-column-gap: 10%;
       }
-    
+
       .grid > .right {
         grid-column: 2;
       }
       
+      .grid > .item {
+        margin-bottom: 10rem;
+      }
+
       .grid > .item1 {
         grid-row-start: 1;
         grid-row-end: 3;
