--- a/src/homeStyleSrc.scss
+++ b/src/homeStyleSrc.scss
@@ -285,8 +285,7 @@ body.home {
       height: var(--decoration-size);
       top: calc(var(--decoration-size) * -1);
       z-index: -1;
-      // background-image: url(imgs/landsBgRoundTop.svg); /* local */
-      background-image: url(/wp-content/uploads/2020/01/landsBgRoundTop.svg); /* wordpress */
+      background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1000 115'><path fill='%23f5f5f5' d='M0,0 C0,0 172,109 500,109 C826,109 1000,0 1000,0 L1000,115 L0,115Z'/></svg>");
       background-repeat: no-repeat;
       background-size: contain;
       background-position: bottom;
@@ -300,8 +299,7 @@ body.home {
       height: var(--decoration-size);
       bottom: calc(var(--decoration-size) * -1);
       z-index: -1;
-      // background-image: url(imgs/landsBgRoundBot.svg); /* local */
-      background-image: url(/wp-content/uploads/2020/01/landsBgRoundBot.svg); /* wordpress */
+      background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1000 115'><path fill='%23f5f5f5' d='M1000,115 C1000,115 828,6 500,6 C174,6 0,115 0,115 L0,0 L1000,0Z'/></svg>");
       background-repeat: no-repeat;
       background-size: contain;
       background-position: top;
@@ -327,12 +325,7 @@ body.home {
   section.how-is-lands-used {
     padding-top: 8rem;
     padding-bottom: 8rem;
-  
-    img {
-      display: block;
-      width: 100%;
-    }
-  
+    
     .section-title > h3 {
       margin-bottom: 3rem;
       text-align: center;
@@ -371,6 +364,22 @@ body.home {
     .item > div {
       width: 100%;
     }
+
+    .media-container {
+      position: relative;
+
+      & > img {
+        display: block;
+        width: 100%;
+      }
+      
+      & > span {
+        position: absolute;
+        bottom: 6px;
+        right: 10px;
+        color: #fff;
+      }
+    }
   
     .text-container {
       padding: 1rem;
@@ -392,11 +401,6 @@ body.home {
   @media (min-width: 600px) {
     section.how-is-lands-used {
       padding-bottom: 12rem;
-
-      img {
-        height: 100%;
-        object-fit: cover;
-      }
   
       .section-title > h3 {
         line-height: 5rem;
@@ -422,6 +426,11 @@ body.home {
         width: 50%;
       }
     
+      .media-container > img {
+        height: 100%;
+        object-fit: cover;
+      }
+
       .text-container {
         display: flex;
         flex-direction: column;
@@ -459,8 +468,7 @@ body.home {
       height: var(--decoration-size);
       top: calc(var(--decoration-size) * -1);
       z-index: -1;
-      // background-image: url(imgs/landsBgIrregTop.svg); /* local */
-      background-image: url(/wp-content/uploads/2020/01/landsBgIrregTop.svg); /* wordpress */
+      background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1000 115'><path fill='%23f5f5f5' d='M-0.161808,31.9464 L-0.175643,115.144 L1000.02,115.144 L1000.03,40.5738 C1000.03,40.5737 968.896,54.3208 935.896,43.3208 C902.896,32.3208 880.826,19.3161 850.391,10.1442 C819.469,0.825523 780.932,-5.59164 729.057,10.8109 C637.774,39.6743 543.754,119.374 306.636,111.319 C149.636,105.986 61.6364,57.6523 -0.161808,31.9464Z'/></svg>");
       background-repeat: no-repeat;
       background-size: contain;
       background-position: bottom;
@@ -474,8 +482,7 @@ body.home {
       height: var(--decoration-size);
       bottom: calc(var(--decoration-size) * -1);
       z-index: -1;
-      // background-image: url(imgs/landsBgIrregBot.svg); /* local */
-      background-image: url(/wp-content/uploads/2020/01/landsBgIrregBot.svg); /* wordpress */
+      background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1000 85'><path fill='%23f5f5f5' d='M0,14 L0,0 L1000,0 L1000,35 C1000,35 959.607,11.4879 868.607,11.4879 C777.607,11.4879 710.44,20.8212 619.44,39.8212 C528.44,58.8212 438.69,81.7379 368.607,81.4879 C300.248,81.244 225.774,40.4879 167.774,20.9879 C97.9336,-2.49288 48,4.5 0,14Z'/></svg>");
       background-repeat: no-repeat;
       background-size: contain;
       background-position: top;
