--- a/src/homeStyleSrc.scss
+++ b/src/homeStyleSrc.scss
@@ -378,6 +378,8 @@ body.home {
         bottom: 6px;
         right: 10px;
         color: #fff;
+        font-weight: bold;
+        opacity: 0.8;
       }
     }
   
@@ -631,6 +633,10 @@ body.home {
 
       .grid > .item.play > .media-container::before {
         opacity: 0;
+      }
+
+      .grid > .item.nohover > .media-container::before {
+        display: none;
       }
     }
   }
