--- a/src/homeStyleSrc.scss
+++ b/src/homeStyleSrc.scss
@@ -43,12 +43,15 @@ body.home {
   
     .text-content {
       text-align: center;
-      text-shadow: 1px 2px 5px #222;
-      --banner-text-color: #ebebeb; // Here to be applied to each text element to make sure it overrides.
+      text-shadow: 0px 2px 8px #111;
+      --banner-text-color: #f0f0f0; // Here to be applied to each text element to make sure it overrides.
   
+      & * {
+        color: var(--banner-text-color) !important;
+      }
+
       & > h1 {
         padding-top: 3rem; // To make sure the title is not covered by the default wordpress navbar in mobile version.
-        color: var(--banner-text-color);
         font-size: 4rem;
         font-weight: 200;
         font-family: 'Oswald', sans-serif;
@@ -58,14 +61,28 @@ body.home {
         margin-top: 1rem;
         margin-bottom: 2rem;
         line-height: 3rem;
-        color: var(--banner-text-color);
         font-size: 3rem;
         font-weight: 500;
         font-family: 'Oswald', sans-serif;
       }
 
       & > h3 {
-        color: var(--banner-text-color);
+        font-weight: 500;
+      }
+
+      & > .extra-info {
+        margin-top: 1.5rem;
+        font-style: italic;
+
+        & > h3 {
+          margin-bottom: -5px;
+          font-size: 2.6rem;
+          font-weight: 500;
+        }
+
+        & > small {
+          font-size: 80%;
+        }
       }
     }
     
