--- a/src/homeStyleSrc.scss
+++ b/src/homeStyleSrc.scss
@@ -67,21 +67,34 @@ body.home {
       }
 
       & > h3 {
+        line-height: 2.1rem;
         font-weight: 500;
+
+        & > span {
+          white-space: nowrap;
+        }
       }
 
       & > .extra-info {
         margin-top: 1.5rem;
-        font-style: italic;
-
-        & > h3 {
-          margin-bottom: -5px;
-          font-size: 2.6rem;
-          font-weight: 500;
-        }
+        font-size: 0.8rem;
 
         & > small {
-          font-size: 80%;
+          font-size: 1em;
+
+          & > span {
+            white-space: nowrap;
+          }
+        }
+
+        & > h3 {
+          padding-bottom: 0;
+          font-size: 2em;
+          font-weight: 500;
+
+          & > span {
+            white-space: nowrap;
+          }
         }
       }
     }
@@ -143,6 +156,14 @@ body.home {
         margin-left: 2rem;
         text-align: right;
         font-size: 2vh;
+
+        & > h3 {
+          line-height: 1.8rem;
+        }
+
+        & > .extra-info {
+          font-size: 1rem;
+        }
       }
     
       .text-content > h1 {
