--- a/src/homeStyleExtra.css
+++ b/src/homeStyleExtra.css
@@ -36,79 +36,8 @@ body {
 }
 
 /*********************************************************/
-/****************** SECTION: PROJECTS ********************/
+/*********************** FOOTER **************************/
 /*********************************************************/
-
-section.projects {
-  margin-top: 8rem;
-  padding-top: 5rem;
-  padding-bottom: 1rem;
-  background-color: #f5f5f5;
-}
-
-section.projects .section-title {
-  font-family: 'Oswald', sans-serif;
-  font-weight: 400;
-  font-size: 2.5rem;
-  text-align: center;
-  margin-bottom: 2rem;
-}
-
-section.projects .items-container {
-  display: flex;
-  justify-content: space-between;
-}
-
-section.projects .project-item {
-  width: 30%;
-  cursor: pointer;
-  text-align: center;
-}
-
-section.projects .project-item > h5 {
-  font-size: 1.2rem;
-  margin-top: 0.8rem;
-}
-
-section.projects .project-item:hover img {
-  transform: scale(1.2);
-}
-
-section.projects .project-item > div {
-  height: 200px;
-  overflow: hidden;
-}
-
-section.projects .project-item img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transition: transform 1s;
-}
-
-section.projects .btn-container {
-  margin-top: 3rem;
-  margin-bottom: 3rem;
-  text-align: center;
-}
-
-/*********************************************************/
-/************** SOCIAL MEDIA AND FOOTER ******************/
-/*********************************************************/
-
-section.social-media {
-  height: 150px;
-  background-color: #d0d0d0;
-}
-
-section.social-media > .content-width > .section-title {
-  text-align: center;
-}
-
-section.social-media > .content-width > .social-media-btns {
-  display: flex;
-}
 
 footer {
   height: 300px;
